--- a/trokut/Base.lproj/Main.storyboard
+++ b/trokut/Base.lproj/Main.storyboard
@@ -154,23 +154,87 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="90" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="reb-iO-uFy">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="90" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="reb-iO-uFy">
                                 <rect key="frame" x="16" y="20" width="343" height="598"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="trokutCell" rowHeight="90" id="YXB-A2-M6H">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="trokutCell" rowHeight="90" id="YXB-A2-M6H" customClass="TrokutCell" customModule="trokut" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="343" height="90"/>
                                         <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="YXB-A2-M6H" id="gzp-fR-CYc" customClass="TrokutCell" customModule="trokut" customModuleProvider="target">
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="YXB-A2-M6H" id="gzp-fR-CYc">
                                             <rect key="frame" x="0.0" y="0.0" width="343" height="89.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="2" translatesAutoresizingMaskIntoConstraints="NO" id="nyu-jJ-UJc">
+                                                    <rect key="frame" x="15" y="11" width="100" height="68"/>
+                                                    <subviews>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="8" translatesAutoresizingMaskIntoConstraints="NO" id="006-rb-9TF">
+                                                            <rect key="frame" x="0.0" y="0.0" width="100" height="21.5"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="8" translatesAutoresizingMaskIntoConstraints="NO" id="FyG-Ti-e39">
+                                                            <rect key="frame" x="0.0" y="23.5" width="100" height="21"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="8" translatesAutoresizingMaskIntoConstraints="NO" id="onL-qn-KqA">
+                                                            <rect key="frame" x="0.0" y="46.5" width="100" height="21.5"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="100" id="pVy-iq-qJB"/>
+                                                    </constraints>
+                                                </stackView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pjw-bG-YnL">
+                                                    <rect key="frame" x="131" y="34.5" width="197" height="20.5"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oUH-ag-Awb">
+                                                    <rect key="frame" x="115" y="67" width="213" height="12"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                                                    <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="oUH-ag-Awb" firstAttribute="leading" secondItem="nyu-jJ-UJc" secondAttribute="trailing" id="4r8-Gn-cCs"/>
+                                                <constraint firstItem="nyu-jJ-UJc" firstAttribute="top" secondItem="gzp-fR-CYc" secondAttribute="topMargin" id="6BJ-9p-gMI"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="nyu-jJ-UJc" secondAttribute="bottom" id="AqI-Tn-Sju"/>
+                                                <constraint firstItem="pjw-bG-YnL" firstAttribute="leading" secondItem="nyu-jJ-UJc" secondAttribute="trailing" constant="16" id="MTL-Je-k3M"/>
+                                                <constraint firstItem="pjw-bG-YnL" firstAttribute="centerY" secondItem="gzp-fR-CYc" secondAttribute="centerY" id="WFJ-HG-5yE"/>
+                                                <constraint firstItem="oUH-ag-Awb" firstAttribute="trailing" secondItem="gzp-fR-CYc" secondAttribute="trailingMargin" id="a8x-Bf-GVb"/>
+                                                <constraint firstItem="oUH-ag-Awb" firstAttribute="trailing" secondItem="gzp-fR-CYc" secondAttribute="trailingMargin" id="eNd-fY-Y7C"/>
+                                                <constraint firstItem="nyu-jJ-UJc" firstAttribute="leading" secondItem="gzp-fR-CYc" secondAttribute="leadingMargin" id="hne-Nb-gtd"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="pjw-bG-YnL" secondAttribute="trailing" id="oQS-If-TmC"/>
+                                                <constraint firstItem="oUH-ag-Awb" firstAttribute="bottom" secondItem="gzp-fR-CYc" secondAttribute="bottomMargin" id="uoO-xX-ILR"/>
+                                            </constraints>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="povrsinaLbl" destination="pjw-bG-YnL" id="wI1-ic-QIr"/>
+                                            <outlet property="stranaALbl" destination="006-rb-9TF" id="03m-im-EMR"/>
+                                            <outlet property="stranaBLbl" destination="FyG-Ti-e39" id="jhY-kp-2Ra"/>
+                                            <outlet property="stranaCLbl" destination="onL-qn-KqA" id="5i1-a5-Lph"/>
+                                            <outlet property="vrijemeLbl" destination="oUH-ag-Awb" id="JoG-G5-CgW"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="reb-iO-uFy" firstAttribute="leading" secondItem="O1u-W8-tvY" secondAttribute="leading" constant="16" id="0jV-Pe-qc9"/>
+                            <constraint firstItem="reb-iO-uFy" firstAttribute="bottom" secondItem="O1u-W8-tvY" secondAttribute="bottom" id="8kD-8K-3D6"/>
+                            <constraint firstItem="O1u-W8-tvY" firstAttribute="trailing" secondItem="reb-iO-uFy" secondAttribute="trailing" constant="16" id="HDF-8k-jNC"/>
+                            <constraint firstItem="reb-iO-uFy" firstAttribute="top" secondItem="O1u-W8-tvY" secondAttribute="top" id="mO9-Rf-6nh"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="O1u-W8-tvY"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="Second" image="second" id="cPa-gy-q4n"/>
