--- a/trokut/Base.lproj/Main.storyboard
+++ b/trokut/Base.lproj/Main.storyboard
@@ -10,10 +10,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--First-->
+        <!--Unos podataka-->
         <scene sceneID="hNz-n2-bh7">
             <objects>
-                <viewController id="9pv-A4-QxB" customClass="FirstViewController" customModule="trokut" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="9pv-A4-QxB" customClass="UnosPodatakaVC" customModule="trokut" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="tsR-hK-woN">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -95,7 +95,7 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="PQr-Ze-W5v"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="First" image="first" id="acW-dT-cKf"/>
+                    <tabBarItem key="tabBarItem" title="Unos podataka" image="first" id="acW-dT-cKf"/>
                     <connections>
                         <outlet property="textFieldStranicaA" destination="HoY-CD-rHb" id="OkA-cm-1Nj"/>
                         <outlet property="textFieldStranicaB" destination="dyX-qD-FT4" id="mQ8-Iw-xkz"/>
@@ -146,16 +146,16 @@
             </objects>
             <point key="canvasLocation" x="1746" y="-321"/>
         </scene>
-        <!--Second-->
+        <!--Pregled podataka-->
         <scene sceneID="wg7-f3-ORb">
             <objects>
-                <viewController id="8rJ-Kc-sve" customClass="SecondViewController" customModule="trokut" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="8rJ-Kc-sve" customClass="PregledPodataka" customModule="trokut" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="QS5-Rx-YEW">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="90" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="reb-iO-uFy">
-                                <rect key="frame" x="16" y="20" width="343" height="598"/>
+                                <rect key="frame" x="16" y="58" width="343" height="560"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="trokutCell" rowHeight="90" id="YXB-A2-M6H" customClass="TrokutCell" customModule="trokut" customModuleProvider="target">
@@ -227,17 +227,28 @@
                                     </tableViewCell>
                                 </prototypes>
                             </tableView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dHx-zu-fN8">
+                                <rect key="frame" x="153.5" y="20" width="68" height="30"/>
+                                <state key="normal" title="BRIŠI SVE">
+                                    <color key="titleColor" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <connections>
+                                    <action selector="brisiBtnWsPressed:" destination="8rJ-Kc-sve" eventType="touchUpInside" id="HGd-ZN-tgy"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="reb-iO-uFy" firstAttribute="leading" secondItem="O1u-W8-tvY" secondAttribute="leading" constant="16" id="0jV-Pe-qc9"/>
                             <constraint firstItem="reb-iO-uFy" firstAttribute="bottom" secondItem="O1u-W8-tvY" secondAttribute="bottom" id="8kD-8K-3D6"/>
+                            <constraint firstItem="dHx-zu-fN8" firstAttribute="centerX" secondItem="QS5-Rx-YEW" secondAttribute="centerX" id="99l-HU-iTY"/>
                             <constraint firstItem="O1u-W8-tvY" firstAttribute="trailing" secondItem="reb-iO-uFy" secondAttribute="trailing" constant="16" id="HDF-8k-jNC"/>
-                            <constraint firstItem="reb-iO-uFy" firstAttribute="top" secondItem="O1u-W8-tvY" secondAttribute="top" id="mO9-Rf-6nh"/>
+                            <constraint firstItem="dHx-zu-fN8" firstAttribute="top" secondItem="O1u-W8-tvY" secondAttribute="top" id="gRu-6K-vJP"/>
+                            <constraint firstItem="reb-iO-uFy" firstAttribute="top" secondItem="dHx-zu-fN8" secondAttribute="bottom" constant="8" id="kJx-vu-Qk9"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="O1u-W8-tvY"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Second" image="second" id="cPa-gy-q4n"/>
+                    <tabBarItem key="tabBarItem" title="Pregled podataka" image="second" id="cPa-gy-q4n"/>
                     <connections>
                         <outlet property="tableView" destination="reb-iO-uFy" id="m21-6p-wkU"/>
                     </connections>
